--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.html
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.html
@@ -53,7 +53,7 @@
       <tr>
         <td id="nameFieldContainer"></td>
         <td id="sendButtonContainer"></td>
-        <td id="ImportHandler"></td>
+        <td id="ImporHandler"></td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
